Big changes in the libraries:  - Now added the Keyboard class to control the reading of keys easier.  - The Keyboard class uses the Windows API to get the current keypresses.

--- a/CGUI/CGUI.csproj
+++ b/CGUI/CGUI.csproj
@@ -22,6 +22,7 @@ You may use it for your own purposes.
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ReadLine\src\ReadLine\ReadLine.csproj" />
     <ProjectReference Include="..\TOOLS\TOOLS.csproj" />
   </ItemGroup>
 
