--- a/TOOLS/TOOLS.csproj
+++ b/TOOLS/TOOLS.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="9.0.0-preview.6.24327.7" />
+    <PackageReference Include="PInvoke.Kernel32" Version="0.7.124" />
+    <PackageReference Include="PInvoke.User32" Version="0.7.124" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\ReadLine\src\ReadLine\ReadLine.csproj" />
   </ItemGroup>
 
 </Project>
