--- a/data/release/release.json
+++ b/data/release/release.json
@@ -1,5 +1,6 @@
 {
   "name": "",
   "version": "0.0.0.0",
-  "sha512": ""
+  "sha512": "",
+  "path": "https://github.com/immortal640/CGUI/master/data/release/package/{arch}-{platform}.zip"
 }
